--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kodit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://quynhquynh.github.io/kodit/",
   "dependencies": {
     "axios": "^0.18.0",
     "node-sass": "^4.9.4",
@@ -14,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
