--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://quynhquynh.github.io/kodit/",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
