--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kodit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://quynhquynh.github.io/kodit/",
+  "homepage": "https://quynhquynh.github.io/visualization-kodit/",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
